--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Ignorar carpetas __pycache__
 __pycache__/
 
+# Ignorar archivos de registro
+logs/*.txt
+logs/*.log
+
 # Ignorar archivos de bytecode de Python
 *.pyc
 *.pyo
